--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <div class="col-6 col-md-3">
       <a href="miniapp/day5/index.html">DAY5</a>
     </div>
+    <div class="col-6 col-md-3">
+      <a href="miniapp/day6/index.html">DAY6</a>
+    </div>
   </div>
 
   <!-- Optional JavaScript -->
