--- a/index.html
+++ b/index.html
@@ -14,29 +14,59 @@
 </head>
 <body>
 
-  <div>
+  <div id="header-include">
+
+  </div>
+
+  <div class="container-fluid pt-5 text-center">
     <h1>Japasvript Training</h1>
     <p>Javascriptで変幻自在なwebサイトを構築するためのスクリプト集です。</p>
   </div>
 
-  <div class="mt-5">
-    <div class="col-6 col-md-3">
-      <a href="miniapp/day1/index.html">DAY1</a>
-    </div>
-    <div class="col-6 col-md-3">
-      <a href="miniapp/day2/index.html">DAY2</a>
-    </div>
-    <div class="col-6 col-md-3">
-      <a href="miniapp/day3/index.html">DAY3</a>
-    </div>
-    <div class="col-6 col-md-3">
-      <a href="miniapp/day4/index.html">DAY4</a>
-    </div>
-    <div class="col-6 col-md-3">
-      <a href="miniapp/day5/index.html">DAY5</a>
-    </div>
-    <div class="col-6 col-md-3">
-      <a href="miniapp/day6/index.html">DAY6</a>
+  <div class="container-fluid">
+    <div class="mt-5 row">
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="miniapp/day1/index.html" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="miniapp/day1/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY1</a>
+        </h4>
+      </div>
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="miniapp/day2/index.html" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="miniapp/day2/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY2</a>
+        </h4>
+      </div>
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="miniapp/day3/index.html" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="miniapp/day3/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY3</a>
+        </h4>
+      </div>
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="miniapp/day4/index.html" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="miniapp/day4/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY4</a>
+        </h4>
+      </div>
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="miniapp/day5/index.html" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="miniapp/day5/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY5</a>
+        </h4>
+      </div>
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="miniapp/day6/index.html" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="miniapp/day6/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY6</a>
+        </h4>
+      </div>
+      <div class="col-12 col-md-6 mb-4 p-4">
+        <iframe src="https://liginc.co.jp/" width="400px" height="300px" style=""></iframe>
+        <h4>
+          <a href="https://xekeia.avil-kyusyu.com/" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY6</a>
+        </h4>
+      </div>
     </div>
   </div>
 
