--- a/miniapp/day6/index.html
+++ b/miniapp/day6/index.html
@@ -5,7 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://gitcdn.xyz/repo/viaino/7ed8205460f1d82fd2d2d72804a60477/raw/d38a198cc68d075a8ccf1ac5ae187cc79be41073/gistfile1.txt" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/
+  iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  
   <!-- original css file -->
   <link rel="stylesheet" type="text/css" href="assets/style.css">
   <title>EverChanginProject</title>
@@ -15,7 +19,10 @@
     <!-- contents start -->
 
 
-    <ul id="instafeed"></ul>
+    <p><a class="link" href="https://naruhodo.repop.jp/javascript-scroll-event/" target="_blank">JavaScript Scroll ivent</a></p>
+    <div id="container"></div>
+    <div id="log">scrollTop:0</div>
+    <div id="log2">ページの最後まで:0%</div>
 
 
 
@@ -30,3 +37,5 @@
   <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
+
+
