--- a/miniapp/day6/index.html
+++ b/miniapp/day6/index.html
@@ -1,41 +1,44 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-
-  <link rel="stylesheet" href="https://gitcdn.xyz/repo/viaino/7ed8205460f1d82fd2d2d72804a60477/raw/d38a198cc68d075a8ccf1ac5ae187cc79be41073/gistfile1.txt" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/
-  iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  
-  <!-- original css file -->
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
-  <title>EverChanginProject</title>
-</head>
-<body id="body">
-  <div class="container-fluid text-center pt-5">
-    <!-- contents start -->
-
-
-    <p><a class="link" href="https://naruhodo.repop.jp/javascript-scroll-event/" target="_blank">JavaScript Scroll ivent</a></p>
-    <div id="container"></div>
-    <div id="log">scrollTop:0</div>
-    <div id="log2">ページの最後まで:0%</div>
+  <!doctype html>
+  <html lang="ja">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- original css file -->
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <title>EverChanginProject</title>
+  </head>
+  <body id="body">
+    <div class="container-fluid text-center pt-5">
+      <!-- contents start -->
 
 
 
-    <!-- contents end -->
-  </div>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <!-- original javascript file -->
-  <script type="text/javascript" src="assets/js/main.js"></script>
-</body>
-</html>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner"> 
+          <div class="insta-card">
+          </div>
+        </div>
+      </div>
 
 
+
+
+      <!-- contents end -->
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- original javascript file -->
+    <script type="text/javascript" src="assets/js/main.js"></script>
+  </body>
+  </html>
