--- a/index.html
+++ b/index.html
@@ -28,43 +28,43 @@
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="miniapp/day1/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day1/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY1</a>
+          <a href="miniapp/day1/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project1</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="miniapp/day2/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day2/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY2</a>
+          <a href="miniapp/day2/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project2</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="miniapp/day3/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day3/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY3</a>
+          <a href="miniapp/day3/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project3</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="miniapp/day4/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day4/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY4</a>
+          <a href="miniapp/day4/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project4</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="miniapp/day5/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day5/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY5</a>
+          <a href="miniapp/day5/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project5</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="miniapp/day6/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day6/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY6</a>
+          <a href="miniapp/day6/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project6</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
         <iframe src="https://liginc.co.jp/" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="https://xekeia.avil-kyusyu.com/" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">DAY6</a>
+          <a href="https://xekeia.avil-kyusyu.com/" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)">#Project6</a>
         </h4>
       </div>
     </div>
