--- a/miniapp/project3/index.html
+++ b/miniapp/project3/index.html
@@ -54,7 +54,7 @@
           <label for="msg">入学理由</label>
           <input id="email" type="text" name="entry.1975168500" placeholder="アイツを殺したくて">
         </div>
-        <button class="active" type="submit" name="button" value="送信">SENT</button>
+        <button class="active" type="submit" name="button" value="送信" onclick="reload(this)">SENT</button>
       </form>
     </div>
 
@@ -70,7 +70,7 @@
           <label for="msg">入学理由</label>
           <input id="email" type="text" name="entry.1975168500" placeholder="アイツを殺したくて">
         </div>
-        <button class="active" type="submit" name="button" value="送信">SENT</button>
+        <button class="active" type="submit" name="button" value="送信" onclick="reload(this)">SENT</button>
       </form>
     </div>
 
@@ -86,7 +86,7 @@
           <label for="msg">入学理由</label>
           <input id="email" type="text" name="entry.1975168500" placeholder="アイツを殺したくて">
         </div>
-        <button class="active" type="submit" name="button" value="送信">SENT</button>
+        <button class="active" type="submit" name="button" value="送信" onclick="reload(this)">SENT</button>
       </form>
     </div>
 
@@ -103,7 +103,7 @@
           <label for="msg">入学理由</label>
           <input id="email" type="text" name="entry.1975168500" placeholder="アイツを殺したくて">
         </div>
-        <button class="active" type="submit" name="button" value="送信">SENT</button>
+        <button class="active" type="submit" name="button" value="送信" onclick="reload(this)">SENT</button>
       </form>
     </div>
     <!-- form box end -->
