--- a/index.html
+++ b/index.html
@@ -26,45 +26,45 @@
   <div class="container-fluid">
     <div class="mt-5 row">
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day1/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project1/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day1/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project1</a>
+          <a href="miniapp/project1/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project1</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day2/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project2/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day2/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project2</a>
+          <a href="miniapp/project2/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project2</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day3/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project3/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day3/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project3</a>
+          <a href="miniapp/project3/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project3</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day4/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project4/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day4/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project4</a>
+          <a href="miniapp/project4/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project4</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day5/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project5/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day5/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project5</a>
+          <a href="miniapp/project5/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project5</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day6/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project6/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day6/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project6</a>
+          <a href="miniapp/project6/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project6</a>
         </h4>
       </div>
       <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/day7/index.html" width="400px" height="300px" style=""></iframe>
+        <iframe src="miniapp/project7/index.html" width="400px" height="300px" style=""></iframe>
         <h4>
-          <a href="miniapp/day7/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project7</a>
+          <a href="miniapp/project7/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project7</a>
         </h4>
       </div>
     </div>
