--- a/index.html
+++ b/index.html
@@ -18,79 +18,81 @@
 
   </div>
 
-  <div class="container-fluid pt-5 text-center">
-    <h1>Japasvript Training</h1>
-    <p>Javascriptで変幻自在なwebサイトを構築するためのスクリプト集です。</p>
+  <div class="container-fluid pt-5">
+    <div class="p-4">
+      <h1>Wizarding of JavaScript</h1>
+      <p>Javascriptで変幻自在なwebサイトを構築するためのテクニック集。</p>
+    </div>
   </div>
 
   <div class="container-fluid">
-    <div class="mt-5 row">
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project01/index.html" width="400px" height="300px" style=""></iframe>
+    <div class="row">
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project01/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project01/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project01</a>
+          <a href="miniapp/project01/index.html" target="_bank"># Project01</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project02/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project02/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project02/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project02</a>
+          <a href="miniapp/project02/index.html" target="_bank"># Project02</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project03/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project03/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project03/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project03</a>
+          <a href="miniapp/project03/index.html" target="_bank"># Project03</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project04/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project04/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project04/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project04</a>
+          <a href="miniapp/project04/index.html" target="_bank"># Project04</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project05/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project05/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project05/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project05</a>
+          <a href="miniapp/project05/index.html" target="_bank"># Project05</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project06/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project06/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project06/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project06</a>
+          <a href="miniapp/project06/index.html" target="_bank"># Project06</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project07/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project07/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project07/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project07</a>
+          <a href="miniapp/project07/index.html" target="_bank"># Project07</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project08/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project08/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project08/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project08</a>
+          <a href="miniapp/project08/index.html" target="_bank"># Project08</a>
         </h4>
       </div>
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project09/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project09/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project09/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project09</a>
+          <a href="miniapp/project09/index.html" target="_bank"># Project09</a>
         </h4>
       </div>
       
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project10/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project10/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project10/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project10</a>
+          <a href="miniapp/project10/index.html" target="_bank"># Project10</a>
         </h4>
       </div>
 
-      <div class="col-12 col-md-6 mb-4 p-4">
-        <iframe src="miniapp/project11/index.html" width="400px" height="300px" style=""></iframe>
+      <div class="col-12 col-lg-4 mb-4 p-5">
+        <iframe src="miniapp/project11/index.html" style=""></iframe>
         <h4>
-          <a href="miniapp/project11/index.html" target="_bank" onmouseover="changeFontSize(this)" onmouseout="changeFontSize1(this)"># Project11</a>
+          <a href="miniapp/project11/index.html" target="_bank"># Project11</a>
         </h4>
       </div>
 
